loading state implementation

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
         <h1>Starbucks Locations</h1>
         <select id="country-select"></select>
         <div id="map"></div>
+        <div id="loading-spinner" class="spinner"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/ol@latest/dist/ol.js"></script>
