--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,18 @@
         <select id="country-select"></select>
         <div id="map"></div>
         <div id="loading-spinner" class="spinner"></div>
+
+        <h2>Validate Location</h2>
+        <div id="validation-form">
+            <label for="latitude">Latitude:</label>
+            <input type="number" id="latitude" name="latitude" step="any">
+            <label for="longitude">Longitude:</label>
+            <input type="number" id="longitude" name="longitude" step="any">
+            <label for="country-code">Country Code (3 letters):</label>
+            <input type="text" id="country-code" name="country-code" maxlength="3">
+            <button id="validate-button">Validate</button>
+        </div>
+        <div id="validation-result"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/ol@latest/dist/ol.js"></script>
@@ -22,6 +34,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf/turf.min.js"></script>
     <script src="js/helper.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/validation.js"></script>
 </body>
 
 </html>
