--- a/client/index.html
+++ b/client/index.html
@@ -11,22 +11,24 @@
 
 <body>
     <div class="layout">
-        <h1>Starbucks Locations</h1>
+        <h2 class="starbucks-title">Starbucks Locations</h2>
         <select id="country-select"></select>
         <div id="map"></div>
         <div id="loading-spinner" class="spinner"></div>
 
-        <h2>Validate Location</h2>
-        <div id="validation-form">
-            <label for="latitude">Latitude:</label>
-            <input type="number" id="latitude" name="latitude" step="any">
-            <label for="longitude">Longitude:</label>
-            <input type="number" id="longitude" name="longitude" step="any">
-            <label for="country-code">Country Code (3 letters):</label>
-            <input type="text" id="country-code" name="country-code" maxlength="3">
-            <button id="validate-button">Validate</button>
-        </div>
-        <div id="validation-result"></div>
+        <section class="validation-section">
+            <h2>Validate Location</h2>
+            <div id="validation-form">
+                <label for="latitude">Latitude:</label>
+                <input type="number" id="latitude" name="latitude" step="any">
+                <label for="longitude">Longitude:</label>
+                <input type="number" id="longitude" name="longitude" step="any">
+                <label for="country-code">Country Code (3 letters):</label>
+                <input type="text" id="country-code" name="country-code" maxlength="3">
+                <button id="validate-button">Validate</button>
+            </div>
+            <div id="validation-result"></div>
+        </section>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/ol@latest/dist/ol.js"></script>
